# cpp-devcontainer

./: CMakeLists.txt  Dockerfile  README.md  main.cpp
.devcontainer/: devcontainer.json
temperature/: CMakeLists.txt  TemperatureConverter.cpp  TemperatureConverter.hpp  TemperatureConverterTest.cpp  TemperatureConverterTests.cpp
